--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "flashcard-app",
+  "homepage": "https://Goru12321.github.io/flashcard-quiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "gh-pages": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
