--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "flashcard-app",
-  "homepage": "https://Goru12321.github.io/flashcard-quiz",
+  "homepage": "https://abhimanyu12321.github.io/flashcard-quiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "gh-pages": "^5.0.0",
+    "axios": "^1.4.0",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
